#578: Fix automatic dependency update (#579)
* #578: Fix automatic dependency update

* Update plugin versions

* Remove requirement

* #577: Fix code for failing NPM dependency URL

* Adapt unit tests

* #577: Don't fail for missing URL

* Fix javadoc generation

* Increment requirement revision

* Update changelog